@@ -1,50 +1,27 @@
 'PERCENT_QUANTITY_TO_SPEND': 0.9,
 'PERCENT_TO_SPEND': 1.0,
-<<<<<<< HEAD
-'MINIMUM_PERCENT_INCREASE': 47.59746270335124,
-'MINIMUM_SCORE': 5.444366295327487,
-'MINIMUM_MOVING_AVERAGE': -65.51573066671614,
-'MAX_DECREASE': -16.94473736214037,
+'MINIMUM_PERCENT_INCREASE': 47.62241509248368,
+'MINIMUM_SCORE': 3.369489057814775,
+'MINIMUM_MOVING_AVERAGE': -65.28851689107105,
+'MAX_DECREASE': -17.18096528740951,
 'MAX_TIME_CYCLE': 60.0,
 'MAX_CYCLES': 168.0,
-'MAX_PERCENT_CHANGE': 85.03153511225634,
-'NEGATIVE_WEIGHT': 41.40278953404139,
-'CUMULATIVE_PERCENT_CHANGE': 2.884615384615384,
-'CUMULATIVE_PERCENT_CHANGE_STORE': 576.6481923086494,
-'SLOT_WEIGHT': 66.042819018759,
-'TIME_INCREASING_MODIFIER': -45.60688221915687,
-'VOLUME_INCREASING_MODIFIER': 55.717248743703514,
-'PERCENT_BY_HOUR_MODIFIER': 30.738587886011416,
-'VOLUME_PERCENT_BY_HOUR_MODIFIER': 19.37964550530127,
-'FLOOR_PRICE_MODIFIER': -75.85972715611985,
-'MODIFIED_VOLUME_MODIFIER': 5.2571506792088805,
-'CUMULATIVE_PRICE_MODIFIER': -60.63338507073851,
-'PRIMARY_MODIFIED_VOLUME_SCALER': 28.471238683923712,
-=======
-'MINIMUM_PERCENT_INCREASE': 170.61203893217737,
-'MINIMUM_SCORE': 176.36097412174422,
-'MINIMUM_MOVING_AVERAGE': -13.065091100782592,
-'MAX_DECREASE': -65.32179396292581,
-'MAX_TIME_CYCLE': 60.0,
-'MAX_CYCLES': 168.0,
-'MAX_PERCENT_CHANGE': -88.90450527308553,
-'NEGATIVE_WEIGHT': -223.36481218810835,
-'CUMULATIVE_PERCENT_CHANGE': 0.0,
-'CUMULATIVE_PERCENT_CHANGE_STORE': 0.0,
-'SLOT_WEIGHT': 29.69099312592518,
-'TIME_INCREASING_MODIFIER': 41.527568059936854,
-'VOLUME_INCREASING_MODIFIER': -11.076626951879849,
-'PERCENT_BY_HOUR_MODIFIER': 183.23578765020187,
-'VOLUME_PERCENT_BY_HOUR_MODIFIER': -56.51815297576464,
-'FLOOR_PRICE_MODIFIER': 5.277098363025207,
-'MODIFIED_VOLUME_MODIFIER': 78.36139642343285,
-'CUMULATIVE_PRICE_MODIFIER': 0.3123453373769529,
-'PRIMARY_MODIFIED_VOLUME_SCALER': -9.250797049387954,
->>>>>>> 8b770c1aa5edb9c4f6f5058722ac5ec2f59be7a3
+'MAX_PERCENT_CHANGE': 82.92051883548159,
+'NEGATIVE_WEIGHT': 40.44373061123367,
+'CUMULATIVE_PERCENT_CHANGE': 2.8170336635522717,
+'CUMULATIVE_PERCENT_CHANGE_STORE': 582.7588363663672,
+'SLOT_WEIGHT': 64.94469062831001,
+'TIME_INCREASING_MODIFIER': -46.130818635861154,
+'VOLUME_INCREASING_MODIFIER': 57.15160291185378,
+'PERCENT_BY_HOUR_MODIFIER': 31.384364024035058,
+'VOLUME_PERCENT_BY_HOUR_MODIFIER': 18.916954937123815,
+'FLOOR_PRICE_MODIFIER': -75.97974139452343,
+'MODIFIED_VOLUME_MODIFIER': 4.790910529416616,
+'CUMULATIVE_PRICE_MODIFIER': -60.98904692325602,
+'PRIMARY_MODIFIED_VOLUME_SCALER': 27.65975993783964,
 'WAIT_FOR_CHECK_FAILURE': 5.0,
 'WAIT_FOR_CHECK_TOO_LOW': 10.0,
 'VARIATION_NUMBER': 0.0,
-'CLASS_NUM': 10.0,
+'CLASS_NUM': 12.0,
 'INTERVAL_TO_TEST': 10080.0,
 'MINUTES_IN_PAST': 1440.0,
-
